@@ -150,6 +150,7 @@ class Hub:
             userurl = current.getuserurl(self.http.auth[0])
             return urlutil.joinpath(userurl + "/", indexname)
         url = urlutil.joinpath(current.rooturl, indexname)
+        url = url.rstrip("/")
         if slash:
             url = url.rstrip("/") + "/"
         return url
@@ -419,14 +420,13 @@ def index(parser):
         help="create an index")
     group.add_argument("--delete", action="store_true",
         help="delete an index")
-    group.add_argument("-m", "--modify", action="store_true",
-        help="modify an index")
     group.add_argument("-l", "--list", action="store_true",
         help="list indexes for the logged in user")
     parser.add_argument("indexname", type=str, action="store", nargs="?",
         help="index name, specified as NAME or USER/NAME")
     parser.add_argument("keyvalues", nargs="*", type=str,
-        help="key=value configuration item")
+        help="key=value configuration item. Possible key=value are "
+             "bases=CSV, volatile=True|False, acl_upload=CSV)")
 
 @subcommand("devpi.upload.upload")
 def upload(parser):
